<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hint_name_input"
            android:id="@+id/textView"
            android:textColor="@android:color/holo_blue_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText"
            android:editable="true"
            android:inputType="textPersonName"
            android:enabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_expires_in"
            android:id="@+id/textView3"
            android:textColor="@android:color/holo_blue_light"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_weight="1"
            android:editable="true"
            android:enabled="true"
            android:inputType="number"
            android:hint="@string/hint_inHours" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_user"
        android:id="@+id/button2"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="36dp"
        android:onClick="onUserAdd"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3" />

</RelativeLayout>